--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/mailEditText"
+        android:id="@+id/usernameEditText"
         android:layout_width="300dp"
         android:layout_height="45dp"
         android:layout_marginTop="38dp"
@@ -51,8 +51,8 @@
         android:inputType="textShortMessage|textPersonName|textPassword|textEmailAddress"
         android:paddingLeft="10dp"
         app:layout_constraintEnd_toEndOf="@+id/mailEditText"
-        app:layout_constraintStart_toStartOf="@+id/mailEditText"
-        app:layout_constraintTop_toBottomOf="@+id/mailEditText" />
+        app:layout_constraintStart_toStartOf="@+id/usernameEditText"
+        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />
 
     <Button
         android:id="@+id/loginButton"
