--- a/app/src/main/res/layout/activity_passengers_data.xml
+++ b/app/src/main/res/layout/activity_passengers_data.xml
@@ -77,7 +77,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@drawable/round_button"
-        android:text="Оплатить"
+        android:text="Следующий"
         android:textColor="@color/white"
         android:layout_margin="24dp"
         app:layout_constraintTop_toBottomOf="@id/scroll"
