--- a/app/src/main/res/layout/activity_route2.xml
+++ b/app/src/main/res/layout/activity_route2.xml
@@ -36,8 +36,9 @@
             android:backgroundTint="@color/colorAccent"
             android:layout_centerVertical="true"
             android:padding="10dp"
-            android:onClick="plusBtnClick"
-            />
+            android:clickable="true"
+
+            android:onClick="plusBtnCick"/>
         <TextView
             android:id="@+id/quantityTV"
             android:layout_width="30dp"
@@ -50,28 +51,35 @@
             android:textSize="19sp"
             android:textColor="@color/colorPrimary"
             />
-        <Button
-            android:id="@+id/minusBtn"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:background="@drawable/minus"
-            android:backgroundTint="@color/colorAccent"
-            android:layout_toLeftOf="@id/quantityTV"
-            android:layout_marginEnd="8dp"
-            android:layout_centerVertical="true"
-            android:onClick="minusBtn"
-            />
+         <Button
+             android:id="@+id/minusBtn"
+             android:layout_width="25dp"
+             android:layout_height="25dp"
+             android:background="@drawable/minus"
+             android:backgroundTint="@color/colorAccent"
+             android:layout_toLeftOf="@id/quantityTV"
+             android:layout_marginEnd="8dp"
+             android:layout_centerVertical="true"
+             android:clickable="true"
+             android:onClick="minusBtnClick"/>
     </RelativeLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/route2RecyclerView"
+    <ScrollView
+        android:id="@+id/route2RVScroll"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="450dp"
+        android:layout_marginBottom="80dp"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/quantityRV"
-        app:layout_constraintBottom_toTopOf="@id/route2Pay"
-
-        />
+        android:scrollbars="vertical"
+        android:scrollbarStyle="outsideInset"
+        >
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/route2RecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+    </ScrollView>
     <Button
         android:id="@+id/route2Pay"
         android:layout_width="140dp"
@@ -83,18 +91,21 @@
         android:gravity="center"
         android:textColor="@color/white"
         android:onClick="route2BuyBtn"
-        app:layout_constraintTop_toBottomOf="@id/route2RecyclerView"
+        app:layout_constraintTop_toBottomOf="@id/route2RVScroll"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
     <Button
+        android:id="@+id/route2BookBtn"
         android:layout_width="140dp"
         android:layout_height="40dp"
-        app:layout_constraintTop_toBottomOf="@id/route2RecyclerView"
-        app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
         android:background="@drawable/round_button"
         android:layout_margin="24dp"
         android:text="Бронировать"
         android:textColor="@color/white"
         android:onClick="route2BookBtn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/route2RVScroll"
         />
 
 
