--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,7 +13,9 @@
             android:id="@+id/foodIV"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:layout_margin="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="24dp"
             android:tint="@color/colorAccent"
             android:src="@drawable/ic_food"/>
 
@@ -33,8 +34,9 @@
             android:layout_margin="24dp"
             android:padding="8dp"
             android:layout_below="@id/serviceRV"
-            android:drawableLeft="@drawable/baggage"
+            android:drawableTop="@drawable/baggage"
             android:drawableTint="@color/colorAccent"
+            android:textColor="@color/colorPrimary"
             />
 
     </RelativeLayout>
