--- a/app/src/main/res/layout/activity_vokzal_info.xml
+++ b/app/src/main/res/layout/activity_vokzal_info.xml
@@ -5,12 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UI.VokzalInfoActivity">
+     <include layout="@layout/toolbar"/>
     <ImageView
         android:id="@+id/vokzalIV"
         android:src="@drawable/vokzalb"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_margin="24dp"
+        android:layout_height="140dp"
+        android:paddingTop="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginTop="?actionBarSize"
         app:layout_constraintTop_toTopOf="parent"
         />
     <TextView
